@startuml Class Diagram
' top to bottom direction
' left to right direction

hide methods
skinparam nodesep 25
skinparam ranksep 25
' skinparam linetype ortho


class "IdentityUser (ASP.Net)" as IdentityUser
{
    +id: Guid
    +email: string
    +passwordHash: string
    +phoneNumber: string
    +userName: string
}

interface IBase
{
    +id : Guid
    +createdAt : DateTime
    +updatedAt : DateTime
}

interface IDeletable
{
    +isDeleted : bool
    +deletedAt : DateTime
}

abstract User
{
    +displayName: string
    +firstName: string
    +lastName?: string
    +bio? : string
    +profilePicture? : byte[]
}

class Admin
{
}

class Listener
{
    +followingArtists: List<Artist>
    +followingListeners: List<Listener>
    +createdPlaylists: List<Playlist>
    +likedPlaylists: List<Playlist>
    +likedSongs: List<Song>
    ..
    +badges: List<Badge>
    +titles: List<Title>

    +equippedBadge: Badge
    +equippedTitle: Title
    ..
    +isSubscribed: bool
    +subscriptionDate: DateTime
}

class Distributor
{
    +artists: List<Artist>
}

class Artist
{
    +followers: List<Listener>
    +albums: List<Album>
    +singles: List<Song>
}

package "Music Related\t\t\t\t\t\t\t\t\t\t" <<cloud>> #DDDDDD 
{

    class Album
    {
        +title: string
        +releaseDate: DateTime
        +songs: List<Song>
        +cover: byte[]
        +createdBy: Artist
    }

    class Song
    {
        +title: string
        +duration: TimeSpan
        +releaseDate: DateTime
        +genres: List<Genre>
        +data: string
        +cover: byte[]
        +createdBy: Artist
    }

    class Playlist
    {
        +title: string
        +songs: List<Song>
        +createdBy: Listener
    }

    class Genre
    {
        +name: string
    }
}

package "Customization\n\n" <<cloud>> #DDDDDD 
{
    class Badge
    {
        +name: string
        +description: string
        +icon: byte[]
    }

    class Title
    {
        +name: string
        +description: string
    }
}

IBase <|-- IDeletable

IdentityUser <|--- User

User <|-- Admin
User <|-- Listener
User <|-- Artist
User <|-- Distributor


Artist "0..n" --l "0..n" Listener : "\t\t"
Artist "1  " *-- "0..n  " Song
Artist "1" *-- "0..n   " Album

Distributor o--l "0..n" Artist : "\tManages\t"

Album *-l "1..n" Song : "\t"

Playlist o-r Song: "\tContains\t"
' Playlist -left[hidden]- Title
' Title -left[hidden]- Badge

Listener *--d "0..n" Playlist : "creates"
Listener -- "0..n" Playlist : "likes"
Listener -- "0..n" Song : "likes"

Listener -- Badge : "equips"
Listener -- "0..n" Badge : "owns"
Listener -- Title : "equips\t\t"
Listener -- "0..n" Title : "owns"

Song -- "1..n" Genre : "\n"


' Song "0..n" -- "0..n" Playlist : "\t\t"
' Playlist "0..n" -- "0..n" Listener : "\t\t"


@enduml